cleanup, method references istf lambda + simplify stream chains